# checkers_core_rust

./: .gitignore  Cargo.toml  build.sh  cache.json  package.json  readme.md  tsconfig.json
bindings/: BestPos.ts
build-js/: gameProcess.d.ts  gameProcess.js  gameProcess.js.map
build-js/bindings/: BestPos.d.ts  BestPos.js  BestPos.js.map  ColorType.d.ts  ColorType.js  ColorType.js.map  DrawType.d.ts  DrawType.js  DrawType.js.map  FinishType.d.ts  FinishType.js  FinishType.js.map  GameState.d.ts  GameState.js  GameState.js.map  Grade.d.ts  Grade.js  Grade.js.map  MoveItem.d.ts  MoveItem.js  MoveItem.js.map  MoveList.d.ts  MoveList.js  MoveList.js.map  Piece.d.ts  Piece.js.map  PieceCount.d.ts  PieceCount.js  PieceCount.js.map  PosState.d.ts  PosState.js  PosState.js.map  Position.d.ts  Position.js.map  PositionAndMove.d.ts  PositionAndMove.js  PositionAndMove.js.map  PositionEnvironment.d.ts  PositionEnvironment.js  PositionEnvironment.js.map  (+14 more)
build-js/neural-learning/: gameTraining.js  gameTraining.js.map  neuralGames.js  neuralGames.js.map
build-wasm/: checkers_core.d.ts  checkers_core.js  checkers_core_bg.wasm  checkers_core_bg.wasm.d.ts
neural-learning/: neuralGames.ts
src/: gameProcess.ts
src/bindings/: BestPos.ts  ColorType.ts  FinishType.ts  Grade.ts  MoveItem.ts  MoveList.ts  Piece.ts  PieceCount.ts  PosState.ts  Position.ts  PositionAndMove.ts  PositionEnvironment.ts  QuietMove.ts  StraightStrike.ts  Strike.ts  Vector.ts
src/neural-learning/: CacheToNeural.ts  gameTraining.ts  mongo_analitics.ts  neuralGames.ts  (+1 more)
tests/: gameProcess.test.ts
(+18 files in other folders)
