[package]
name = "checkers_core"
version = "0.1.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
path = './src/rs/lib.rs'

[build]
out-dir = 'build'



[dependencies]
min-max = "0.1.8"
ts-rs = "6.2.1"
schemars = "0.8.11"
tsify = "0.4.3"
vec-option = "0.3.0"
js-sys = "0.3.60"
serde = { version = "1.0", features = ["derive", 'rc'] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
serde_derive = "1.0.66"
crossbeam = "0.8.2"
rayon = "1.6.1"
rand = "0.8.5"

[[bin]]
name = "main"
path = "./src/rs/main.rs"

[profile.release]
overflow-checks = true

[profile.dev]
opt-level = 3

